manifests/deployment-my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: nodejs-app
  annotations:
    promtail.io/logs: "/var/log/containers/*.log"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: sorokin21/nodejs_test_crud-my_app:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: nodejs-app
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
