manifests/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: chatops-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: chatops-data
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nodejs-app
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
