manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatops-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chatops
  template:
    metadata:
      labels:
        app: chatops
    spec:
      containers:
        - name: chatops-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: chatops-data
              mountPath: /var/lib/postgresql/data
        - name: my-app
          image: sorokin21/nodejs_test_crud-my_app:latest
          ports:
            - containerPort: 4000
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: nginx-html
              mountPath: /etc/nginx/html
      volumes:
        - name: chatops-data
          emptyDir: {}
        - name: nginx-conf
          hostPath:
            path: /path/to/nginx.conf
        - name: nginx-html
          hostPath:
            path: /path/to/html

---
apiVersion: v1
kind: Service
metadata:
  name: chatops-db-service
spec:
  selector:
    app: chatops-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
